--- a/SpringSecurityBasic/src/main/resources/application.properties
+++ b/SpringSecurityBasic/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+# @author dharmaraj.pawale@sterlite.com
+# @copyright Sterlite Technologies Ltd.
+# @creationdate 17-Aug-2020
+ 
 spring.security.user.name=admin
 spring.security.user.password=admin123
