--- a/SpringSecurityJDBC/src/main/resources/application.properties
+++ b/SpringSecurityJDBC/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# @author dharmaraj.pawale@sterlite.com
+# @copyright Sterlite Technologies Ltd.
+# @creationdate 18-Aug-2020
+
+
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=hr
