--- a/SpringSecurityLDAP/src/main/resources/application.properties
+++ b/SpringSecurityLDAP/src/main/resources/application.properties
@@ -4,6 +4,10 @@
 #spring.ldap.username=cn=Manager,dc=sterlite,dc=com
 #spring.ldap.password=secret
 
+# @author dharmaraj.pawale@sterlite.com
+# @copyright Sterlite Technologies Ltd.
+# @creationdate 20-Aug-2020
+
 #Embedded LDAP server config:
 #spring.ldap.embedded.base-dn=dc=springframework,dc=org
 #spring.ldap.embedded.credential.username=uid=admin
@@ -13,14 +17,7 @@
 #spring.ldap.embedded.url=ldap://localhost:8389/
 #spring.ldap.embedded.validation.enabled=false
 
-#spring.ldap.embedded.base-dn=dc=springframework,dc=org 
-#spring.ldap.embedded.ldif=classpath:test-server.ldif 
-#spring.ldap.embedded.port=389 
+spring.ldap.embedded.base-dn=dc=springframework,dc=org 
+spring.ldap.embedded.ldif=classpath:test-server.ldif 
+spring.ldap.embedded.port=389 
 
-# Embedded Spring LDAP
-spring.ldap.embedded.base-dn= dc=memorynotfound,dc=com
-spring.ldap.embedded.credential.username= uid=admin
-spring.ldap.embedded.credential.password= secret
-spring.ldap.embedded.ldif=classpath:test-data.ldif
-spring.ldap.embedded.port= 12345
-spring.ldap.embedded.validation.enabled=false
