--- a/SpringSecurityOAuth2Client/src/main/resources/application.properties
+++ b/SpringSecurityOAuth2Client/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# @author dharmaraj.pawale@sterlite.com
+# @copyright Sterlite Technologies Ltd.
+# @creationdate 20-Aug-2020
+
+
 server.port=8085
 #server.servlet.context-path=/oauth2_client
 server.servlet.session.cookie.name=CLIENT_SESSION
