--- a/SpringSecurityOAuth2Server/src/main/resources/application.properties
+++ b/SpringSecurityOAuth2Server/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# @author dharmaraj.pawale@sterlite.com
+# @copyright Sterlite Technologies Ltd.
+# @creationdate 20-Aug-2020
+
 server.port=8082
 server.servlet.context-path=/auth
 
